fix not showing sidebar in post page

--- a/sass/parts/_sidebar.scss
+++ b/sass/parts/_sidebar.scss
@@ -20,6 +20,7 @@
   .sidebar {
     width: 30%;
     float: right;
+    margin-right: 0;
   }
 }
 
